SDKs/apideck.com/vault/8.85.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    opts := []sdk.SDKOption{
        sdk.WithSecurity(
            shared.Security{
                APIKey: shared.SchemeAPIKey{
                    APIKey: "YOUR_API_KEY_HERE",
                },
                ApplicationID: shared.SchemeApplicationID{
                    APIKey: "YOUR_API_KEY_HERE",
                },
            }
        ),
    }

    s := sdk.New(opts...)
    
    req := operations.ConnectionSettingsAllRequest{
        Security: operations.ConnectionSettingsAllSecurity{
            APIKey: shared.SchemeAPIKey{
                APIKey: "YOUR_API_KEY_HERE",
            },
        },
        PathParams: operations.ConnectionSettingsAllPathParams{
            Resource: "sit",
            ServiceID: "voluptas",
            UnifiedAPI: "culpa",
        },
        Headers: operations.ConnectionSettingsAllHeaders{
            XApideckAppID: "expedita",
            XApideckConsumerID: "consequuntur",
        },
    }
    
    res, err := s.Connections.ConnectionSettingsAll(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.GetConnectionResponse != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Connections

* `ConnectionSettingsAll` - Get resource settings
* `ConnectionSettingsUpdate` - Update settings
* `ConnectionsAdd` - Create connection
* `ConnectionsAll` - Get all connections
* `ConnectionsCallback` - Callback
* `ConnectionsDelete` - Deletes a connection
* `ConnectionsImport` - Import connection
* `ConnectionsOne` - Get connection
* `ConnectionsRevoke` - Revoke connection
* `ConnectionsToken` - Get Access Token
* `ConnectionsUpdate` - Update connection

### Consumers

* `ConsumerRequestCountsAll` - Consumer request counts
* `ConsumersAll` - Get all consumers
* `ConsumersOne` - Get consumer

### Logs

* `LogsAll` - Get all consumer request logs

### Sessions

* `SessionsCreate` - Create Session

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
